--- a/.env
+++ b/.env
@@ -63,3 +63,6 @@ STRIPE_KEY=pk_test_Kqmq6XXBwdoYJFLV1CSDnaxz
 STRIPE_SECRET=sk_test_JLeo9KvVZvhgsMzQ7KCl43in
 
 FCM_SECRET_KEY=
+
+SALT_MAC=D<QE0vdlILA\cHP;OF*Z;TY6l/*KGO"D0>v
+SALT_CODE=BxT6;<cXWgR9j\PVp;PA0*np-UIc7"XM;HL>JG/
