--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Food-express
 APP_ENV=local
 APP_KEY=base64:SunHMsPgZNWjG157DS563bySOyAvEU87P12109HPQFQ=
 APP_DEBUG=true
-APP_URL=http://localhost:1020
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
