--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Food-express
 APP_ENV=local
 APP_KEY=base64:HgNyZb7EKkqOVvITlRjeVxLdAmoIb/t0HEKAYNGceUg=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
