--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,11 @@
     "doctrine/dbal": "3.5.0",
     "fideloper/proxy": "^4.2",
     "fruitcake/laravel-cors": "^1.0",
-    "guzzlehttp/guzzle": "^7.0.1",
+    "guzzlehttp/guzzle": "^7.5",
     "jackiedo/timezonelist": "^5.0",
     "laravel-notification-channels/twilio": "3.1.1",
     "laravel/framework": "^8.0",
+    "laravel/sanctum": "*",
     "laravel/tinker": "^2.0",
     "laravel/ui": "^3.0",
     "laravelcollective/html": "^6.1",
