--- a/.env
+++ b/.env
@@ -15,11 +15,11 @@ DB_PASSWORD=
 
 
 DB_CONNECTION_TWO=sqlsrv
-DB_HOST_TWO=N1NWPLSK12SQL-v01.shr.prod.ams1.secureserver.net
+DB_HOST_TWO=tcp:192.168.152.1
 DB_PORT_TWO=1433
 DB_DATABASE_TWO=ph20922595621_polimek
-DB_USERNAME_TWO=dbeditor
-DB_PASSWORD_TWO=py2%1Oj8
+DB_USERNAME_TWO=sa
+DB_PASSWORD_TWO=sa1
 
 
 
