--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ DB_PASSWORD=
 
 
 DB_CONNECTION_TWO=sqlsrv
-DB_HOST_TWO=tcp:192.168.152.1
+DB_HOST_TWO=tcp:XEONSTORE
 DB_PORT_TWO=1433
 DB_DATABASE_TWO=ph20922595621_polimek
 DB_USERNAME_TWO=sa
