--- a/.env
+++ b/.env
@@ -36,11 +36,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=6c8c09529ad49d
-MAIL_PASSWORD=5a7f957cca1e75
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=aabdelrhim974@gmail.com
+MAIL_PASSWORD=eruuszjdfgjktzpu
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
