--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "spatie/laravel-permission": "^4.0.0",
     "spatie/laravel-sluggable": "^3.4.0",
     "staudenmeir/eloquent-json-relations": "^1.1",
+    "twilio/sdk": "^6.44",
     "tymon/jwt-auth": "^1.0.2",
     "yajra/laravel-datatables-oracle": "^9.9"
   },
